--- a/index.html
+++ b/index.html
@@ -476,12 +476,9 @@
           <h1 style="color: #ff00ff; text-shadow: 0 0 20px #ff00ff;">🐌 SLOBBY 🐌</h1>
           <p>Memecoin Snail Racing Championship</p>
           <input type="text" id="usernameInput" placeholder="Enter username" class="input-field">
-          <input type="text" id="tokenInput" placeholder="Enter Solana Token or Address" class="input-field">
+          <input type="text" id="tokenInput" placeholder="Enter Solana Token CA" class="input-field">
           <div id="quickSelectTokens" class="ui-element">
-            <button class="quick-select-btn" data-token="TROLL">TROLL</button>
-            <button class="quick-select-btn" data-token="AURA">AURA</button>
-            <button class="quick-select-btn" data-token="FARTCOIN">FARTCOIN</button>
-            <button class="quick-select-btn" data-token="GIGA">GIGA</button>
+            <!-- Removed preset ticker buttons -->
           </div>
           <div id="loader"></div>
           <p id="setupError" style="color: #ff4444; display: none;"></p>
